# cgtmapapp-backend

./: Dockerfile  README.md  alembic.ini  companies.csv  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  setup.py
.github/workflows/: deploy.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 3ff5f3b92a84_added_fields_for_icon_and_banner_images.py  f501d24eb7f1_first_commmit.py
app/: __main__.py  app.py  config.json  models.py
app/api/: __init__.py  deps.py
app/api/api_v1/endpoints/: companies.py  images.py
app/core/: config.py  db_secret.py
app/crud/: base.py  crud_company.py
app/db/: engine.py
app/schemas/: company.py
cgt_map_backend/: __main__.py  app.py  cli.py  companies_router.py  config.py  db_models.py  db_uri_secret.py  pydantic_annotations.py
lambda_app/: config.json  lambda_app.py
tests/: test_app.py  tests_base.py
